--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: python
+dist: bionic
 python:
     - "3.7"
-virtualenv:
-    system_site_packages: true
 install:
     - pip install -r requirements.txt
-    - pip install -e .
     - python setup.py -q install
 script:
     - nosetests
