Pipeline preparation strategy interface added, and workspace dir changing if exists in new destination

--- a/app/tests/lib/config/config/general.yml
+++ b/app/tests/lib/config/config/general.yml
@@ -3,6 +3,8 @@ main:
     home: /tmp/ease/easeci
     temp: /tmp/ease
 output:
-  autopublishing: false
+  autopublishing: False
   queue:
     max-size: 100
+  consumer:
+    max-size: 15
