--- a/config/general.yml
+++ b/config/general.yml
@@ -2,9 +2,18 @@ main:
   mount:
     copy: true
   paths:
-    home: /home/karol/dev/ease-ci/easeci-core/workspace
+    home: /tmp/easeci/workspace/easeci
     temp: /tmp/ease
 output:
   autopublishing: false
   queue:
     max-size: 100
+  consumer:
+    max-size: 15
+
+# Global settings of EaseRunner, if in the Pipeline it is not specified parameters,
+# default will be taken
+runner:
+  default:
+    output-method: terminal
+    logs-persister: None
